src/objects/SPE2_KPI_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEMS INTEGRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SUPPORT SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCHITECTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM AND OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUID CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFECT VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECURITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLE RAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMALL CELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGGREGATION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PROCUREMENT &amp; TELECOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION &amp; E2E SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC MANUFACTURING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERCONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMICONDUCTOR AND RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT ASSIGNED SPEND GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW &amp; SW SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS &amp; RF PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECOM OEM/ODM/JDM AND EMBEDDED POWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASESTATION ANTENNAS &amp; ECOSYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE SERVICES &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPAIR &amp; SPARES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING NI SERVICES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Hierarchy__c</fullName>
        <formula>Text(CategoryCluster__c)+&apos;--&gt;&apos;+Text(CategoryGroup__c)+&apos;--&gt;&apos;+Text(Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUILDING INVESTMENT/CAPEX WITHOUT RENTS AND LEASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY MANAGEMENT SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENTAL/LEASE/TRANSACTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION MAINTENANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORKPLACE DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSOCIATED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAREHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SERVICES OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COACHING &amp; OTHER CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL TAX &amp; INSURANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL &amp; INTELLECTUAL PROPERTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING &amp; COMMUNICATIONS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUNCTIONAL TEST EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING AUXILIARIES AND CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFORMANCE TEST EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOT SOLUTIONS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo_Hierarchy__c</fullName>
        <formula>TEXT(Region__c)+&apos;--&gt;&apos;+ Text(SubRegion__c)+&apos;--&gt;&apos;+ Text(Country__c)+&apos;--&gt;&apos;+Text(Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Better__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Better?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Attrribute__c</fullName>
        <label>KPI Attrribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI ID</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipName>SPE_KPI_Threshold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI_Title__c</fullName>
        <encrypted>true</encrypted>
        <label>KPI Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <formula>Text(BusinessUnit__c)+&apos;--&gt;&apos;+Text(BusinessLine__c)+&apos;--&gt;&apos;+Text(Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thr_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Thr External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Boundary__c</fullName>
        <label>Threshold Boundary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Title__c</fullName>
        <label>Threshold Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <label>Weightage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>KPI Threshold</label>
    <nameField>
        <displayFormat>Thr-{000000}</displayFormat>
        <label>Threshold Sequential Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>